--- a/site.css
+++ b/site.css
@@ -1,10 +1,11 @@
 body {
-    background-color: aqua;
+    background-color: red;
 }
 
 p {
     font-family: 'Courier New', Courier, monospace;
 }
+
 ul {
     background-color: blueviolet;
 }
